<resources>
    <string name="login">登录</string>
    <string name="login_name">填写账户名</string>
    <string name="login_pass">填写密码</string>
    <string name="login_no_password">请输入密码</string>
    <string name="login_no_userno">请输入账号</string>
    <string name="mailrge1">我们发送了一封激活邮件到您的邮箱。</string>
    <string name="mailrge2">请登录邮箱按邮件内容引导激活您的账户。</string>
    <string name="mailrge3">如您已经激活账户，请登录移办通</string>
    <string name="app_name">移办通</string>
    <string name="app_store">商店</string>
    <string name="app_dynamic">动态</string>
    <string name="app_microapp">应用</string>
    <string name="app_user">我</string>
    <string name="app_send_msgcard">发动态</string>
    <string name="app_new">新建</string>
    <string name="app_select">选择</string>
    <string name="app_cancel">取消</string>
    <string name="app_edit">编辑</string>
    <string name="app_complete">完成</string>
    <string name="app_ok">确定</string>
    <string name="app_continue">继续</string>
    <string name="app_next">下一步</string>
    <string name="app_wating">正在处理,请稍后...</string>
    <string name="app_send">发送</string>
    <string name="app_show_location">显示位置</string>
    <string name="app_share_scope">分享范围</string>
    <string name="app_no_more_data">没有更多的数据了</string>
    <string name="app_photo">拍照</string>
    <string name="app_update_success">更新成功</string>
    <string name="app_psw_meg">请输入正确的密码格式！ </string>
    <string name="app_notice">提示信息</string>
    <string name="user_buyer">我的订单</string>
    <string name="user_file">我的文件</string>
    <string name="user_org">组织架构</string>
    <string name="user_contact">联系人/小组</string>
    <string name="user_discover">发现</string>
    <string name="user_mycontact">我的客户</string>
    <string name="user_signature">个性签名</string>
    <string name="setting">设置</string>
    <string name="switch_acc">切换机构</string>
    <string name="scan_frame">扫一扫</string>
    <string name="activity_dynamice_category">分类</string>
    <string name="new_image_upload_error">上传图片出现错误，请重新尝试！</string>
    <string name="setting_account">账号</string>
    <string name="setting_change_password">修改密码</string>
    <string name="setting_general">通用</string>
    <string name="setting_about">关于</string>
    <string name="setting_logout">注销</string>
    <string name="setting_clean">清理缓存</string>
    <string name="select_inst">选择机构</string>
    <string name="msg_card_context">#巡店报告#\n日期:2015年4月24日(星期五)\n地点：深圳市南山区沙河西路\n\卖场气氛:活跃\n卖场活动:买100送换100</string>
    <string name="msg_card_location">深圳市南山区西丽镇茶光路1003号</string>
    <string name="msg_card_time">1个月以前</string>
    <string name="msg_card_lastcomment">最后回复</string>
    <string name="msg_card_lastcomment_user">黄小明</string>
    <string name="msg_card_lastcomment_context">这个巡店报告写的不错！继续加油！</string>
    <string name="msg_card_comment">评论</string>
    <string name="msg_card_fw">转发</string>
    <string name="msg_card_praise">点赞</string>
    <string name="msg_card_praise_success">点赞成功</string>
    <string name="msg_card_share">转发</string>
    <string name="msg_card_fw_to">转发给了</string>
    <string name="msg_card_sieve">掷骰子</string>
    <string name="add_comment_success_tip">消息卡片评论成功！</string>
    <string name="add_forwadr_success_tip">消息卡片转发成功！</string>
    <string name="msg_dialog_title">未选择分享范围！</string>
    <string name="msg_dialog_content">还未选择分享范围，这样将只有本人可以看到此消息！</string>
    <string name="msg_dialog_continue">返回选择</string>
    <string name="msg_dialog_cancel">确定发送</string>
    <string name="msg">消息</string>
    <string name="activity_msg_card_list_title">消息卡片列表</string>
    <string name="activity_msg_card_detail_title">消息详情</string>
    <string name="preview_image">图片预览</string>
    <string name="org_composite_title">联系人</string>
    <string name="org_composite_myself">我</string>
    <string name="org_composite_org_hr">部门</string>
    <string name="org_composite_org_group">小组</string>
    <string name="org_list_title_hr">部门</string>
    <string name="org_list_title_group">小组</string>
    <string name="org_edit_new">编辑部门</string>
    <string name="org_add_newuser">添加新成员</string>
    <string name="org_add_neworg">添加新部门</string>
    <string name="parent_org">上级部门</string>
    <string name="org_phone_user">通讯录</string>
    <string name="org_user_list">成员列表</string>
    <string name="children_org">下级部门</string>
    <string name="custom_org">自定义部门</string>
    <string name="add_org_tip">请输入组织/小组名称</string>
    <string name="add_org_success_tip">添加组织/小组成功！</string>
    <string name="add_orguser_success_tip">添加组织用户关联成功！</string>
    <string name="update_org_success_tip">修改组织/小组成功！！</string>
    <string name="delete_orguser_success_tip">删除组织用户关联成功！</string>
    <string name="org_add">添加组织</string>
    <string name="org_name">组织名称</string>
    <string name="new_org_tip">请输入部门/小组名称</string>
    <string name="target_org">目标部门</string>
    <string name="add_org_to">添加到</string>
    <string name="add_use_org_to">通过组织结构添加</string>
    <string name="add_use_phonebook_to">通过手机通讯录添加</string>
    <string name="choose_add_use_to">请选择用户！</string>
    <string name="invitation_reg">邀请注册</string>
    <string name="orguserphone_success_tip">邀请消息发送成功！</string>
    <string name="doc_composite_title">文档</string>
    <string name="doc_image_location">本地图片</string>
    <string name="doc_image_online">云图片</string>
    <string name="doc_file_location">本地文件</string>
    <string name="doc_file_online">云文件</string>
    <string name="doc_select_num_max">最多允许选择%1$d个文件</string>
    <string name="select_num_max">最多选择%1$d个</string>
    <string name="please_select">请选择</string>
    <string name="doc_file_info">文件信息</string>
    <string name="doc_file_tip">未知</string>
    <string name="doc_file_from">来自：</string>
    <string name="doc_file_uploaddate">上传时间：</string>
    <string name="doc_file_size">大小：</string>
    <string name="doc_file_open">打开</string>
    <string name="doc_file_download">下载</string>
    <string name="doc_file_upload">上传</string>
    <string name="doc_file_share_success_tip">分享成功！</string>
    <string name="doc_file_share_tip">你没有选择分享人哦！</string>
    <string name="doc_file_download_error_tip">下载失败！</string>
    <string name="doc_file_download_tip">你的手机连使用数据流量下载将会消耗流量，是否继续？</string>
    <string name="doc_file_upload_tip">你的手机连使用数据流量上传将会消耗流量，是否继续？</string>
    <string name="register_user">注册用户</string>
    <string name="register_user_welcome">欢迎加入移办通，请输入您的邮箱地址</string>
    <string name="register_user_input_email">填写邮箱地址</string>
    <string name="register_user_input_email_error">请输入一个有效的电子邮箱</string>
    <string name="detail_client">客户详情</string>
    <string name="add_client">添加客户</string>
    <string name="contact_name">联系人名</string>
    <string name="delete_adviser">删除</string>
    <string name="delete_tip">删除成功!</string>
    <string name="account_balance">账户余额</string>
    <string name="order">订单</string>
    <string name="recharge_history">充值记录</string>
    <string name="waiting_pay">待付款</string>
    <string name="order_fee_tip">实付款:￥</string>
    <string name="pay_now">立即支付</string>
    <string name="order_list">订单列表</string>
    <string name="order_detail">订单详情</string>
    <string name="times">次数</string>
    <string name="pay_detail">付款详情</string>
    <string name="consultant">专属顾问</string>
    <string name="service_provider">服务提供商</string>
    <string name="submit_attach">提交资料</string>
    <string name="attach_submit">资料提交</string>
    <string name="attach_submit_ways">资料提交方式</string>
    <string name="checkout_attach">查看资料</string>
    <string name="product_need_attach">服务需要提交相关资料</string>
    <string name="work_order_state">工单状态</string>
    <string name="complain">投诉</string>
    <string name="comment_work_order">评价工单</string>
    <string name="write_comment">撰写评论</string>
    <string name="append_comment">追加评论</string>
    <string name="order_score">服务评分</string>
    <string name="comment_detail">评价详情</string>
    <string name="workorder_detail">工单详情</string>
    <string name="recharge">充值</string>
    <string name="confirm_recharge">确认充值</string>
    <string name="recharge_money">充值金额</string>
    <string name="recharge_hint">请输入你要充值的金额</string>
    <string name="payment_ways">支付方式</string>
    <string name="payment_ways_hint">请选择支付方式</string>
    <string name="recharge_type_hint">实时支付，无需审核</string>
    <string name="payment_now">立即付款</string>
    <string name="order_money_tip">订单金额:&#160; </string>
    <string name="total_money_tip">合计金额:&#160; </string>
    <string name="remain_money_tip">剩余金额:&#160; </string>
    <string name="confirm_pay">确定支付</string>
    <string name="payment_money">支付金额:&#160; </string>
    <string name="already_pay">已付款</string>
    <string name="pay_success_be_wait">付款成功！请等待确认。</string>
    <string name="recharge_id_tip">充值ID:&#160; </string>
    <string name="alipay_pay">支付宝支付</string>
    <string name="location_select">选择位置</string>
    <string name="location_select_office">写字楼</string>
    <string name="location_select_business">商家</string>
    <string name="location_select_community">小区</string>
    <string name="topic">话题</string>
    <string name="topic_tips">输入你想要查找的话题</string>
    <string name="client_title">客户管理</string>
    <string name="client_proxy_bill">代理下单</string>
    <string name="new_dynamic_upload_error">上传动态附件出现错误，请重新尝试！</string>
    <string name="new_dynamic_send_notuser">发送动态出现错误，无法获取当前用户信息！</string>
    <string name="new_dynamic_send_notinst">发送动态出现错误，无法获取当前机构信息！</string>
    <string name="new_dynamic_send_notcontent">你还没有输入要分享的内容。</string>
    <string name="new_dynamic_send_success">动态发送成功！</string>
    <string name="new_dynamic_send_error">动态发送时出现错误！%1$s</string>
    <string name="store_change_location_dialog_title">城市改变</string>
    <string name="store_change_location_dialog_content">系统定位到你在%1$s.%2$s,需要切换到%3$s.%4$s吗?</string>
    <string name="product_detail">服务详情</string>
    <string name="product_detail_selectcategory">选择分类</string>
    <string name="product_detail_content">服务内容</string>
    <string name="product_detail_phases">服务阶段</string>
    <string name="product_detail_comment">服务评价</string>
    <string name="product_detail_instname">由%1$s提供</string>
    <string name="product_comment">产品评论</string>
    <string name="user_photograph">头像</string>
    <string name="user_info">用户信息</string>
    <string name="user_infoo">个人信息</string>
    <string name="user_name">名字</string>
    <string name="agency">机构</string>
    <string name="department">部门</string>
    <string name="local_img">本地图片</string>
    <string name="yun_img">云图片</string>
    <string name="pwd_prompt">请输入6-15位字母或数字的密码组合！</string>
    <string name="pwd_promp">两次密码输入不一致！</string>
    <string name="pwd_upd_success">密码修改成功</string>
    <string name="ori_pwd">原始密码</string>
    <string name="ori_pwd_prompt">请输入原始密码</string>
    <string name="new_pwd">新密码</string>
    <string name="new_pwd_prompt">请输入新密码</string>
    <string name="sure_pwd">确认密码</string>
    <string name="sure_pwd_prompt">请输入确认密码</string>
    <string name="user_password">用户密码</string>
    <string name="old_pwd_input_pro">请输入原始密码！</string>
    <string name="new_pwd_input_pro">请输入新密码！</string>
    <string name="sure_pwd_input_pro">请输入确认密码！</string>
    <string name="my_clients">我的客户</string>
    <string name="msg_card_praise_cancel">取消点赞</string>
    <string name="user_register">用户注册</string>
    <string name="init">初始化</string>
    <string name="init_inst">初始化机构</string>
    <string name="inst_no">机构编号</string>
    <string name="inst_no_input_notice">请输入机构编号</string>
    <string name="company_name">公司名称</string>
    <string name="company_name_input_notice">请输入公司名称</string>
    <string name="staff_num">公司人数</string>
    <string name="staff_num_input_notice">请选择公司人数</string>
    <string name="manager">管理员</string>
    <string name="edition">版本%1$.1f</string>
    <string name="rating">给我评分</string>
    <string name="app_company_name">深圳市顶聚科技有限公司</string>
    <string name="rights_reserved">版权所有</string>
    <string name="rights_reserved_info">Copyright © 2015-2016</string>
</resources>