<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.yun9.jupiter.widget.JupiterTitleBarLayout
        android:id="@+id/user_passwordTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleLeftIcoSrc="@drawable/arrow_left"
        app:titleLeftIcoVisibility="true"
        app:titleLeftText="@string/setting"
        app:titleLeftTextVisibility="true"
        app:titleRightText="@string/app_ok"
        app:titleRightTextVisibility="true"
        app:titleText="@string/setting_change_password"/>
    <com.yun9.jupiter.widget.JupiterSpringbackScrollView
        android:layout_below="@id/user_passwordTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pwd_prompt"
        android:textSize="16dp"
        android:gravity="center"/>

    <TextView
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ori_pwd"
        android:textSize="16dp"/>
    <EditText
        android:inputType="textPassword"
        android:id="@+id/oldPassword"
        android:padding="15dp"
        android:background="@color/whites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ori_pwd_prompt"
        android:textSize="16dp"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_pwd"
        android:textSize="16dp"/>
    <EditText
        android:inputType="textPassword"
        android:id="@+id/newPassword"
        android:padding="15dp"
        android:background="@color/whites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_pwd_prompt"
        android:textSize="16dp"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sure_pwd"
        android:textSize="16dp"/>
    <EditText
        android:inputType="textPassword"
        android:id="@+id/surePassword"
        android:padding="15dp"
        android:background="@color/whites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sure_pwd_prompt"
        android:textSize="16dp"/>
    </LinearLayout>
    </com.yun9.jupiter.widget.JupiterSpringbackScrollView>
</LinearLayout>