<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.yun9.jupiter.widget.JupiterTitleBarLayout
        android:id="@+id/initInstTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleLeftIcoSrc="@drawable/arrow_left"
        app:titleLeftIcoVisibility="true"
        app:titleRightText="@string/init"
        app:titleRightTextVisibility="true"
        app:titleText="@string/init_inst"/>
    <LinearLayout
        android:paddingTop="10dp"
        android:layout_below="@id/initInstTitle"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:paddingTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/whites"
        android:paddingLeft="18dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inst_no"/>
        <EditText
            android:id="@+id/instNoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inst_no_input_notice"/>
    </LinearLayout>
    <LinearLayout
        android:paddingTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/whites"
        android:paddingLeft="18dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company_name"/>
        <EditText
            android:id="@+id/companyNameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company_name_input_notice"/>
    </LinearLayout>
    <com.yun9.jupiter.widget.JupiterRowStyleSutitleLayout
        android:layout_marginBottom="5dp"
        android:id="@+id/staffNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:rowStyleSutitleShowMainImage="false"
        app:rowStyleSutitleTitleText="@string/staff_num"
        app:rowStyleSutitleShowSutitleText="false"
        app:rowStyleSutitleShowTimeText="false"
        /><!--
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/staffNumLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>-->
    <com.yun9.jupiter.widget.JupiterRowStyleSutitleLayout
        android:id="@+id/manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:rowStyleSutitleShowMainImage="false"
        app:rowStyleSutitleTitleText="@string/manager"
        app:rowStyleSutitleText=""
        app:rowStyleSutitleShowTimeText="false"
        app:rowStyleSutitleShowArrow="false"
        />
    </LinearLayout>
</RelativeLayout>