<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.yun9.jupiter.widget.JupiterTitleBarLayout
        android:id="@+id/setting_about_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleText="@string/setting_about"
        app:titleLeftIcoVisibility="true"
        app:titleLeftIcoSrc="@drawable/arrow_left"/>
    <LinearLayout
        android:layout_below="@id/setting_about_title"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:background="@color/about_background"
        android:layout_width="match_parent"
        android:layout_height="265dp"
        android:gravity="center">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:src="@drawable/logo_setting"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edition"
            android:gravity="center"/>
    </LinearLayout>

    <com.yun9.jupiter.widget.JupiterRowStyleSutitleLayout
        android:layout_marginTop="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:rowStyleSutitleShowMainImage="false"
        app:rowStyleSutitleShowSutitleText="false"
        app:rowStyleSutitleTitleText="@string/rating"
        app:rowStyleSutitleShowTimeText="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="25dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_company_name"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rights_reserved"/>
    </LinearLayout>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rights_reserved_info"
            android:gravity="center"/>
    </LinearLayout>
</RelativeLayout>