<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.yun9.jupiter.widget.JupiterTitleBarLayout
        android:id="@+id/titlebar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:titleLeftIcoSrc="@drawable/left_white"
        app:titleLeftIcoVisibility="true"
        app:titleRightText="@string/login"
        app:titleRightTextVisibility="true"
        app:titleText="@string/register_user"></com.yun9.jupiter.widget.JupiterTitleBarLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titlebar"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:src="@drawable/mailicon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/mailrge1"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/mailrge2"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/mailrge3"
            android:textSize="18dp" />

        <Button
            android:id="@+id/user_first_logging"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_border"
            android:text="@string/login"
            android:textColor="@color/title_color"
            android:textSize="18dp" />
    </LinearLayout>


</RelativeLayout>
